# Terminal

./: .gitignore  CMakeLists.txt  CNAME  commands.sh  content.cpp  content.hpp  egg.py  index.html  main.cpp  run-linux.sh  run-mac.sh  run-windows.bat  terminalOneLiners.txt
linuxbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  portfolio-linux
linuxbuild/ftxui/: Makefile  cmake_install.cmake  ftxui-targets.cmake
linuxbuild/ftxui/doc/: Makefile  cmake_install.cmake
linuxbuild/ftxui/examples/: Makefile  cmake_install.cmake
macbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
macbuild/ftxui/: Makefile  cmake_install.cmake  ftxui-targets.cmake
macbuild/ftxui/doc/: Makefile  cmake_install.cmake
macbuild/ftxui/examples/: Makefile  cmake_install.cmake
winbuild/: dockcross-windows
